--- a/30Min_Python.ipynb
+++ b/30Min_Python.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
        "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -317,25 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = \"Stavros\""
+    "name = input('what is your name ?')\n",
+    "# name = \"joung\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Hello, Stavros!'"
+       "'Hello, joung!'"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,24 +347,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, Stavros!\n"
+      "Hello, joung!\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Hello, {name}!\")"
+    "print(f\"Hello, {name}!\")\n",
+    "# print('hello',name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "password = 'secret'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess = input('now please enter your password? ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok now you can play some other game.  joung\n"
+     ]
+    }
+   ],
+   "source": [
+    "while guess != password:\n",
+    "    guess = input('incorrect password. please try again. ')\n",
+    "else:\n",
+    "    print('ok now you can play some other game. ', name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -450,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +607,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -639,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -648,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -674,7 +714,7 @@
        "[1, 2, 3, 'A new item']"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -685,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +734,7 @@
        "10"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -712,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -735,133 +775,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 43,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classinstance.myfunction(1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classinstance.common"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "MyClass.common = 30"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classinstance.common"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#다중 상속은 다음과 같이 선언됩니다 class OtherClass (MyClass1, MyClass2, MyClassN)\n",
-    "class OtherClass(MyClass):\n",
-    "    # The \"self\" argument is passed automatically\n",
-    "    # and refers to the class instance, so you can set\n",
-    "    # instance variables as above, but from inside the class.\n",
-    "    def __init__(self, arg1):\n",
-    "        self.myvariable = 3\n",
-    "        print(arg1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n"
-     ]
-    }
-   ],
-   "source": [
-    "classinstance = OtherClass(\"hello\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "classinstance.myfunction(1, 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "classinstance.test = 10"
+    "classinstance.myfunction(1, 2)"
    ]
   },
   {
@@ -881,6 +810,117 @@
     }
    ],
    "source": [
+    "classinstance.common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MyClass.common = 30"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classinstance.common"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#다중 상속은 다음과 같이 선언됩니다 class OtherClass (MyClass1, MyClass2, MyClassN)\n",
+    "class OtherClass(MyClass):\n",
+    "    # The \"self\" argument is passed automatically\n",
+    "    # and refers to the class instance, so you can set\n",
+    "    # instance variables as above, but from inside the class.\n",
+    "    def __init__(self, arg1):\n",
+    "        self.myvariable = 3\n",
+    "        print(arg1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "classinstance = OtherClass(\"hello\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classinstance.myfunction(1, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classinstance.test = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "classinstance.test"
    ]
   },
@@ -894,14 +934,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "50\n"
      ]
     }
    ],
@@ -914,6 +954,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from turtle import *\n",
+    "\n",
+    "\n",
+    "def box(num):\n",
+    "\n",
+    "  for i in range(num):\n",
+    "      forward(100)\n",
+    "      right(360/num)\n",
+    "\n",
+    "num = input('숫자를 입력해 주세요(삼각형: 3, 사각형: 4, 오각형: 5 ),  끝내려면 quit를 새로운 줄에 입력하세요 ')\n",
+    "# 그림판 끝내려면 새로운 줄에 'quit' 입력하세요"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 자기가 만든 함수 box를 실행해보기\n",
+    "if num == '3':\n",
+    "      box(int(num))\n",
+    "elif num == '4':\n",
+    "      box(int(num))\n",
+    "elif num == '5':\n",
+    "      box(int(num))\n",
+    "else:\n",
+    "      print('error')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quit"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -923,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -933,7 +1018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -946,7 +1031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -957,7 +1042,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +1051,7 @@
        "'This is a sample string'"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -986,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1016,7 +1101,7 @@
        "True"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1029,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1123,7 @@
        "2"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1050,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
